# FIRST-CameraControl

./: .gitignore  CMakeLists.txt  README.md  config.yaml
src/: Camera.cpp  Camera.h  Configuration.cpp  Configuration.h  Console.cpp  Console.h  Controller.cpp  Controller.h  Joystick.cpp  Joystick.h  cameraControl.h  main.cpp
test/: Makefile  detectJoystick.cpp  joystick.h  main.cpp  main.out
